--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           </div>
         </div>
         <div id="sobre"><p class="azul">Sobre nós</p></div>
+          <h1>vendedores licensiados pela riot games™</h1>
         <div id="fale"><p class="azul">Contate-nos</p></div>
         <br>
         <br>
