--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
             </div>
           </div>
         </div>
-        <div id="sobre"><p class="azul">Sobre nós</p></div>
-          <h1>vendedores licensiados pela riot games™</h1>
+        <div id="sobre"><p class="azul">Sobre nós</p>
+          <br>
+          <br>
+          <h1>vendedores licenciados pela riot games™</h1>
+        </div>
+          
         <div id="fale"><p class="azul">Contate-nos</p></div>
         <br>
         <br>
