--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
         <div id="sobre"><p class="azul">Sobre nós</p>
           <br>
           <br>
-          <h1>vendedores licenciados pela riot games™</h1>
+          <h1>Loja oficial de mercadoria da riot games™</h1>
+          <p></p>
+          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="">
         </div>
-          
         <div id="fale"><p class="azul">Contate-nos</p></div>
         <br>
         <br>
@@ -115,7 +116,7 @@
         <br>
         <br>
         <br>
-        <br>
+        <br>ggg
         <br>
         <br>
         <br>
