--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <div id="sobre"><p class="azul">Sobre nós</p>
           <br>
           <br>
-          <h1>Loja oficial de mercadoria da riot games™</h1>
+          <h1>Loja oficial de mercadoria da Riot Games™</h1>
           <p></p>
-          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="">
+          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;">
         </div>
         <div id="fale"><p class="azul">Contate-nos</p></div>
         <br>
@@ -116,18 +116,7 @@
         <br>
         <br>
         <br>
-        <br>ggg
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+          <center> © 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</center>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
