--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
         <br>
         <br>
         <br>
+        <footer>
           <center> © 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</center>
+        </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
