--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         <br>
         <br>
         <footer>
+          <center><img src="img/riot-games-logo.png" alt="" style="width: 200px; height: 200px;"></center>
           <center> © 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</center>
         </footer>
     <!-- Optional JavaScript; choose one of the two! -->
