--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <br>
         <footer>
           <center><img src="img/riot-games-logo.png" alt="" style="width: 200px; height: 200px;"></center>
-          <center> © 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</center>
+          <center><p class="halal">© 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</p></center>
         </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
