--- a/index.html
+++ b/index.html
@@ -23,25 +23,31 @@
   <body style="background-color: #B6C4FE;">
 
     <!-- navbar -->
-        <nav class="bg-light">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://www.youtube.com/watch?v=lxYygnvQuvI" target="_blank">BOTÃO HALAL</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#produtos">PRODUTOS</a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/channels4_profile-depositphotos-bgremover.png" alt="" style="height: 125px; width: 125px; margin: -25px;"></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#sobre">SOBRE NÓS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#fale">CONTATE-NOS</a>
-                </li>
-              </ul>
-        </nav>
+    <nav class="navbar navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://www.youtube.com/watch?v=lxYygnvQuvI" target="_blank">BOTÃO HALAL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#produtos">PRODUTOS</a>
+          </li>
+          <li>
+              <a href="#"><img src="img/channels4_profile-depositphotos-bgremover.png" alt="" style="height: 125px; width: 125px; margin: -25px;"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sobre">SOBRE NÓS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#fale">CONTATE-NOS</a>
+          </li>
+        </ul>
+        </div>
+
+    </nav>
 <br>
 <br>
 <br>
