--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Worlds Merch</title>
   </head>
-  <body style="background-color: #B6C4FE;">
+  <body style="background-color: #B6C4FE;" onscroll="rolamento()">
 
     <!-- navbar -->
     <nav class="navbar navbar-light bg-light">
@@ -48,12 +48,6 @@
         </div>
 
     </nav>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <!-- carrossel -->
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
@@ -114,14 +108,7 @@
           <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;">
         </div>
         <div id="fale"><p class="azul">Contate-nos</p></div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
         <footer>
           <center><img src="img/riot-games-logo.png" alt="" style="width: 200px; height: 200px;"></center>
           <center><p class="halal">© 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</p></center>
