--- a/index.html
+++ b/index.html
@@ -111,12 +111,10 @@
 
         <footer>
           <center><img src="img/riot-games-logo.png" alt="" style="width: 200px; height: 200px;"></center>
-          <center><p class="halal">© 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</p></center>
-          <br>
-          <br>
+          <center><p class="halal">© 2021 Riot Games, Inc. Todos os direitos reservados. Riot Games, League of Legends e PvP.net são marcas registradas e marcas de serviço da Riot Games, Inc.</p>
+          </center>
         </footer>
     <!-- Optional JavaScript; choose one of the two! -->
-a
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
