--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <br>
           <br>
           <h1>Loja oficial de mercadoria da Riot Games™</h1>
-          <p></p>
+          <p class="haraam">Loja oficial do Campeonato Mundial de League of Legends, conhecido como Worlds. Aqui, levamos em conta o nível de importância mundial no cenário de Esports atual, trazendo produtos de alta qualidade deste evento!</p>
           <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;">
         </div>
         <div id="fale"><p class="azul">Contate-nos</p></div>
