--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
   <body style="background-color: #B6C4FE;" onscroll="rolamento()">
 
     <!-- navbar -->
-    <nav class="navbar navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+    <nav class="bg-light" style="top: 0px;">
         <ul class="nav justify-content-center">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="https://www.youtube.com/watch?v=lxYygnvQuvI" target="_blank">BOTÃO HALAL</a>
@@ -45,7 +41,6 @@
             <a class="nav-link" href="#fale">CONTATE-NOS</a>
           </li>
         </ul>
-        </div>
 
     </nav>
 <!-- carrossel -->
@@ -80,23 +75,25 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <div class="card card-1 cor" >
+                <div class="card-j card-1" >
                   <h3>Moletons</h3>
                   <p>Conheça nossa linha de moletons do evento.</p>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="card card-2">
+                <div class="card-j card-2">
                   <h3>Máscaras</h3>
                   <p>Conheça nossa linha de máscaras do evento.</p>
                 </div>
               </div>
+              <a href="produtos.html">
               <div class="col-md-4">
-                <div class="card card-3">
+                <div class="card-j card-3">
                   <h3>MUITO MAIS...</h3>
                   <p>Conheça o resto do nosso estoque.</p>
                 </div>
               </div>
+            </a>
             </div>
           </div>
         </div>
@@ -105,9 +102,22 @@
           <br>
           <h1>Loja oficial de mercadoria da Riot Games™</h1>
           <p class="haraam">Loja oficial do Campeonato Mundial de League of Legends, conhecido como Worlds. Aqui, levamos em conta o nível de importância mundial no cenário de Esports atual, trazendo produtos de alta qualidade deste evento!</p>
-          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;">
+          <br>
+          <br>
+          <div class="jogar">
+          <p class="haraam">Clique aqui para jogar</p>
+          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;" class="sofrencia
+          ">
+          </div>
         </div>
-        <div id="fale"><p class="azul">Contate-nos</p></div>
+        <div id="fale"><p class="azul">Contate-nos</p>
+          <p>Visite as redes sociais de League of Legends pelos seguintes ícones:</p>
+          <a href="https://www.youtube.com/user/riotgamesinc" target="_blank"><img src="img/youtube-icon.png" alt="" class="preto"></a>
+          <a href="https://twitter.com/leagueoflegends" target="_blank"><img src="img/Twitter-icon.png" alt="" class="pretom"></a>
+          <a href="https://www.facebook.com/leagueoflegends" target="_blank"><img src="img/social-facebook-button-blue-icon.png" alt="" class="preto"></a>
+          <a href="https://www.instagram.com/leagueoflegends/" target="_blank"><img src="img/instagram-icon.png" alt="" class="preto"></a>
+          <a href="https://www.reddit.com/r/leagueoflegends/" target="_blank"><img src="img/reddit-icon.png" alt="" class="preto"></a>
+        </div>
 
         <footer>
           <center><img src="img/riot-games-logo.png" alt="" style="width: 200px; height: 200px;"></center>
