--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="bg-light" style="top: 0px;">
         <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://www.youtube.com/watch?v=lxYygnvQuvI" target="_blank">BOTÃO HALAL</a>
+            <a class="nav-link active" aria-current="page" href="index.html">ÍNDICE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#produtos">PRODUTOS</a>
@@ -86,8 +86,8 @@
                   <p>Conheça nossa linha de máscaras do evento.</p>
                 </div>
               </div>
-              <a href="produtos.html">
               <div class="col-md-4">
+                <a href="produtos.html">
                 <div class="card-j card-3">
                   <h3>MUITO MAIS...</h3>
                   <p>Conheça o resto do nosso estoque.</p>
@@ -106,8 +106,9 @@
           <br>
           <div class="jogar">
           <p class="haraam">Clique aqui para jogar</p>
-          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;" class="sofrencia
-          ">
+          <a href="https://signup.br.leagueoflegends.com/pt/signup/index?_gl=1*1iienwz*_ga*MTE3MzM4MzYxOC4xNjM3NzE5MjM0*_ga_FXBJE5DEDD*MTYzNzcxOTIzMC4xLjEuMTYzNzcxOTI1NS4zNQ..">
+          <img src="img/Loot_Worlds2021_Orb_Final.png" alt="" style="width: 200px; height: 200px;" class="sofrencia">
+          </a>
           </div>
         </div>
         <div id="fale"><p class="azul">Contate-nos</p>
