--- a/produtos.html
+++ b/produtos.html
@@ -20,13 +20,13 @@
 
     <title>Worlds Merch</title>
   </head>
-  <body style="background-color: #B6C4FE;" onscroll="rolamento()">
+  <body style="background-color: #B6C4FE;">
 
     <!-- navbar -->
     <nav class="bg-light" style="top: 0px;">
         <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://www.youtube.com/watch?v=lxYygnvQuvI" target="_blank">BOTÃO HALAL</a>
+            <a class="nav-link active" aria-current="page" href="index.html" >ÍNDICE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#produtos">PRODUTOS</a>
@@ -35,10 +35,10 @@
               <a href="#"><img src="img/channels4_profile-depositphotos-bgremover.png" alt="" style="height: 125px; width: 125px; margin: -25px;"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#sobre">SOBRE NÓS</a>
+            <a class="nav-link" href="index.html">SOBRE NÓS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#fale">CONTATE-NOS</a>
+            <a class="nav-link" href="index.html">CONTATE-NOS</a>
           </li>
         </ul>
 
@@ -98,7 +98,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 col-sm-12">
-              <div class="card" style="width: 100%;">
+              <div class="card" style="width: 100%;" margin-top: 90px;>
                   <img src="img/produtos/Track-Jacket-front-v2-2560x3200.png" class="card-img-top" id="fotocas">
                   <div class="card-body">
                   <h5 class="card-title">Casaco</h5>
@@ -112,7 +112,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 100%;">
+            <div class="card" style="width: 100%; margin-top: 90px;">
                 <img src="img/produtos/Unisex-Tee-Gold-front-v3-copy-2560x3200.png" class="card-img-top" id="fotocam">
                 <div class="card-body">
                 <h5 class="card-title">Camiseta</h5>
@@ -128,25 +128,25 @@
                 <!-- coluna 2  -->
                 
                 <div class="col-lg-3 col-md-6 col-sm-12">
-                    <div class="card" style="width: 100%;">
+                    <div class="card" style="width: 100%; margin-top: 90px;";>
                         <img src="img/produtos/Baron-Hat-front-v2-copy-2560x3200.png" class="card-img-top" id="fotobone" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Boné Worlds</h5>
                         <select class="form-select" aria-label="Default select example" id="bone" onchange="calcularpedido()">
                             <option selected>selecione o modelo</option>
-                            <option value="bonepreto">Baron(preto)</option>
-                            <option value="boneazul">Floral(azul)</option>
+                            <option value="bonepreto">Baron(preto) - $ 24,00</option>
+                            <option value="boneazul">Floral(azul) - $ 24,00</option>
                         </select>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-12">
-                  <div class="card" style="width: 100%;">
+                  <div class="card" style="width: 100%; margin-top: 90px;">
                       <img src="img/produtos/Joggers-front-v2-copy-2560x3200.png" class="card-img-top" id="fotocal">
                       <div class="card-body">
                       <h5 class="card-title">Calça</h5>
-                      <select class="form-select" aria-label="Default select example" id="cal" onchange="calcularpedido()">
+                      <select class="form-select" aria-abel="Default select example" id="cal" onchange="calcularpedido()">
                           <option selected>Selecione o estilo</option>
                           <option value="calnormal">Normal - $52,00</option>
                           <option value="calpremium">Premium - $56,00</option>
@@ -163,7 +163,7 @@
                 <!-- coluna 4 -->
                 
                 <div class="col-lg-3 col-md-6 col-sm-12">
-                    <div class="card" style="width: 100%;">
+                    <div class="card" style="width: 100%; margin-top: 190px;">
 
                         <div class="card-body">
                         <h5 class="card-title">total do pedido</h5>
